<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin">

	<TextView
	    android:gravity="center_horizontal"
	    android:id="@+id/text_title"
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:text="@string/title_name"
	    android:textStyle="bold"
	    android:textColor="@color/blue_band_dark2"
	    android:textSize="24sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:paddingStart="10dp"
            android:gravity="center_vertical"
            android:id="@+id/text_port_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/txt_portname"
            android:textColor="@color/blue_band_dark"
            android:textSize="18sp"/>

        <EditText
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edit_box_bg"
            android:paddingStart="10dp"
            android:gravity="center_vertical"
            android:id="@+id/edit_port_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/value_portname" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:paddingStart="10dp"
            android:gravity="center_vertical"
            android:id="@+id/text_baud_rate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/txt_baudrate"
            android:textColor="@color/blue_band_dark"
            android:textSize="18sp"
            android:layout_marginTop="2dp" />

        <EditText
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edit_box_bg"
            android:paddingStart="10dp"
            android:gravity="center_vertical"
            android:id="@+id/edit_baud_rate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/value_baudrate" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_show_msg"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="0dp"
        android:background="#0f000000"
        android:scrollbarStyle="outsideOverlay"
        android:layout_weight="1" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:orientation="vertical" >
	        <EditText
	            android:padding="5dp"
	            android:id="@+id/edit_show_msg"
	            android:layout_width="fill_parent"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
	            android:background="@null"
	            android:clickable="true"
	            android:enabled="true"
	            android:focusable="false"
	            android:gravity="top"
	            android:scrollbars="vertical"
	            android:singleLine="false"
	            android:text=""
	            android:textColor="#fff"
	            android:textSize="16sp" >
	        </EditText>
       </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:scaleType="fitCenter"
                android:src="@drawable/finger152_200"
                android:id="@+id/image_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="获取图像" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnReadVersion"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:onClick="OnClickDevVersion"
                android:text="@string/btn_readVersion"
                android:textColor="#ffffff"
                android:background="@drawable/button_up" />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/btnReadFeature"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:onClick="OnClickReadFeature"
                android:text="@string/btn_readFeature"
                android:textColor="#ffffff"
                android:background="@drawable/button_up" />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/btnReadTemplage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:onClick="OnClickReadTemplate"
                android:text="@string/btn_readTemplate"
                android:textColor="#ffffff"
                android:background="@drawable/button_up" />

            <Button
                android:id="@+id/btnFingerMatch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:onClick="OnClickFingerMatch"
                android:textColor="#ffffff"
                android:text="@string/btn_fingerMatch"
                android:layout_marginTop="5dp" 
                android:background="@drawable/button_up" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>